--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 .loader {
   width: 45px;
   aspect-ratio: 0.75;
-  --c: no-repeat linear-gradient(#333 0 0);
+  --c: no-repeat linear-gradient(#005eff 0 0);
   background: var(--c) 0% 50%, var(--c) 50% 50%, var(--c) 100% 50%;
   background-size: 20% 50%;
   animation: loading 1s infinite linear;
